--- a/startbootstrap-business-casual-gh-pages/index.html
+++ b/startbootstrap-business-casual-gh-pages/index.html
@@ -54,7 +54,7 @@
             <a class="nav-link text-uppercase text-expanded" href="novedades.html">Noticias y Novedades</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="login.html">Login Amigos</a>
+            <a class="nav-link text-uppercase text-expanded" href="login.html">Registrate Amigos</a>
           </li>
         </ul>
       </div>
@@ -65,7 +65,7 @@
     <div class="container">
       <div class="intro">
         <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/intro.jpg" alt="">
-        <div class="intro-text left-0 text-center bg-faded p-5 rounded">
+         <div class="intro-text left-0 text-center bg-faded p-5 rounded">
           <h2 class="section-heading mb-4">
             <span class="section-heading-upper">Delicioso Cafe</span>
             <span class="section-heading-lower">disfruta de cada momento</span>
@@ -97,13 +97,13 @@
     
     </li>
     <div>
-      <img src="img/novedades.jpg" width=400px height=500px>
+      <img src="img/productos2.jpg" width=400px height=500px>
       <li class="nav-item px-lg-4">
            <a class="btn btn-primary" href="novedades.html">Noticias y Novedades</a>
     </li>
     </div>
     <div>
-      <img src="img/logros3.jpg" width=400px height=500px>
+      <img src="img/logros4.jpg" width=100% height=500px>
       <li class="nav-item px-lg-4">
            <a class="btn btn-primary" href="logros.html">Nuestros Logros</a>
       
@@ -132,6 +132,14 @@
             </h2>
 
             <p class="mb-0">Nuestro deber es brindarte experiencias unica, en compañia de tus seres queridos, en un lugar en el que te puedas sentir comodo, a gusto, y brindarte los mejores productos frescos acompañado de un delicioso cafe, cultivado en las mejores tierras de Colombia, que nos brinda la madre naturaleza.Lo mas importante es que te sientas feliz en nuestros establecimientos.</p>
+            <br>
+            <h2 class="section-heading mb-4">
+              <span class="section-heading-upper">Cualquier duda o sugerencias</span>
+              <span class="section-heading-lower">Contactanos</span>
+            </h2>
+            <p class="mb-0">Escribenos a traves del correo: servicio.cliente@juanvaldezcafe.com.</p>
+            <p class="mb-0">Linea de atención:01 8000 517 711</p>
+            <p class="mb-0">Horario de la linea de atención: Lunes a Viernes 8:00 a.m a 6:00 p.m y Sabados de 8:00 a.m a 12:00 p.m.</p>
           </div>
         </div>
       </div>
@@ -143,6 +151,9 @@
   <footer class="footer text-faded text-center py-5">
     <div class="container">
       <p class="m-0 small">Copyright &copy; Juan Valdez 2020</p>
+    </div>
+    <div>
+      <p>Contactanos: 7423995 en Bogota o al 018000517711 en el resto del pais</p>
     </div>
   </footer>
 
